Added remove field from pager editor and removed unused fields

--- a/src/app/formly-builder/components/fields/display-html-editor/display-html-editor.component.html
+++ b/src/app/formly-builder/components/fields/display-html-editor/display-html-editor.component.html
@@ -1,5 +1,4 @@
-
 <div class="editor-wrapper">
-  <ngx-editor-menu [editor]="editor" [toolbar]="toolbar" [disabled]="formControl.disabled" ></ngx-editor-menu>
+  <ngx-editor-menu [editor]="editor" [toolbar]="toolbar" [disabled]="disabled"></ngx-editor-menu>
   <ngx-editor [editor]="editor" [formControl]="formControl"></ngx-editor>
 </div>
