--- a/src/app/formly-builder/components/fields/page-fields/page-fields.component.html
+++ b/src/app/formly-builder/components/fields/page-fields/page-fields.component.html
@@ -22,6 +22,7 @@
   [id]="field.id"
   class="page-fields"
   cdkDropList
+  *ngIf="field.fieldGroup?.length; else noFields"
   [cdkDropListData]="this"
   [cdkDropListAutoScrollStep]="5"
   [cdkDropListDisabled]="!reorderEnabled"
@@ -59,9 +60,15 @@
 
     <ng-container matColumnDef="edit">
       <td mat-header-cell *matHeaderCellDef [attr.aria-label]="'Edit Field Buttons Column' | translate"></td>
-      <td mat-cell *matCellDef="let row" [attr.data-label]="''">
+      <td mat-cell *matCellDef="let row" [attr.data-label]="'Delete, Preview, and Edit buttons' | translate">
 
         <div class="svg-icon" *ngIf="!reorderEnabled">
+          <button type="button" mat-icon-button (click)="confirmRemoval(row)">
+            <div class="center-content flex">
+              <mat-icon>delete</mat-icon>
+            </div>
+          </button>
+
           <button type="button" mat-icon-button (click)="preview(row)">
             <div class="center-content flex">
               <mat-icon>preview</mat-icon>
@@ -90,3 +97,28 @@
   </table>
 
 </div>
+
+<div class="errors-and-hints">
+  <!-- This should remain hidden as its built from Formly's error states and will not pipe to tokens -->
+  <formly-validation-message #validationMessage [field]="field" [style.display]="'none'"></formly-validation-message>
+
+  <mat-error *ngIf="validationMessage.errorMessage && formControl.touched" class="body-text error-text">
+    <ng-container *ngIf="validationMessage.errorMessage | isArray; else stringErrorMessage">
+      <ng-container *ngFor="let errorMessage of validationMessage.errorMessage; let last = last;">
+        {{ errorMessage }}<br *ngIf="!last">
+      </ng-container>
+    </ng-container>
+
+    <ng-template #stringErrorMessage>
+      {{ validationMessage.errorMessage | tokens: to }}
+    </ng-template>
+  </mat-error>
+
+  <mat-hint *ngIf="to.hint && !(validationMessage.errorMessage && formControl.touched)" class="body-text">{{ to.hint | tokens: to }}</mat-hint>
+</div>
+
+<ng-template #noFields>
+  <div class="flex page-fields center-content" translate>
+    No Fields Configured
+  </div>
+</ng-template>
