--- a/src/app/formly-builder/components/expression/operator-condition/operator-condition.component.scss
+++ b/src/app/formly-builder/components/expression/operator-condition/operator-condition.component.scss
@@ -1,5 +1,5 @@
 
-.statement {
+.condition {
   display: grid;
   grid-auto-rows: auto;
   grid-template-columns: [left] auto [middle] auto [right] auto;
