--- a/src/app/formly-builder/modals/rule-editor/rule-editor.component.html
+++ b/src/app/formly-builder/modals/rule-editor/rule-editor.component.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class="statement">
+<div class="condition">
   <div class="center-content">
     <formly-field class="operator-selection" *ngIf="operator" [field]="operator"></formly-field>
   </div>
