--- a/src/app/formly-builder/components/expression/expression-builder/expression-builder.component.html
+++ b/src/app/formly-builder/components/expression/expression-builder/expression-builder.component.html
@@ -2,7 +2,7 @@
 
 <div class="flex fill-width">
   <div class="top-buttons center-content" [style.margin-left]="'auto'">
-    <button type="button" mat-button (click)="add()">
+    <button type="button" mat-button (click)="add()" [disabled]="formControl?.disabled">
       <div class="center-content flex">
         <mat-icon>add</mat-icon>
 
