--- a/src/app/formly-builder/components/form-editor/form-editor.component.html
+++ b/src/app/formly-builder/components/form-editor/form-editor.component.html
@@ -38,7 +38,6 @@
 
       <mat-expansion-panel-header [ngClass]="{ 'remove-disable-shading': reorderEnabled }">
         <div class="fill center-content header-contents">
-
           <mat-panel-title class="page-summary subtitle-filled">
             <div class="summary-row">
               <div class="row-label" translate>Position</div>{{ page.model?._order }}
@@ -49,6 +48,12 @@
             </div>
           </mat-panel-title>
 
+          <div style="margin-left: auto; margin-right: 1em;">
+            <div class="center-content error" *ngIf="page.formControl?.touched && page.formControl?.invalid" matTooltip="{{ 'Contains errors' | translate }}">
+              <mat-icon>error</mat-icon>
+              {{ page.content }}
+            </div>
+          </div>
         </div>
       </mat-expansion-panel-header>
 
