--- a/src/app/formly-core/fields/date-input-field/date-input-field.component.scss
+++ b/src/app/formly-core/fields/date-input-field/date-input-field.component.scss
@@ -1,6 +1,7 @@
 
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   padding-top: 1em;
 }
 
@@ -12,15 +13,11 @@
   width: unset;
 }
 
-:host ::ng-deep mat-form-field mat-label {
-  font-size: 21px !important;
-}
-
 :host ::ng-deep mat-form-field .mat-form-field-wrapper .mat-form-field-flex {
   align-items: end;
 } 
 
-:host ::ng-deep mat-form-field.no-label.mat-form-field-appearance-standard .mat-form-field-wrapper .mat-form-field-flex {
+:host ::ng-deep mat-form-field.mat-form-field-appearance-standard .mat-form-field-wrapper .mat-form-field-flex {
   padding-top: 0 !important;
 
   .mat-form-field-infix {
@@ -33,31 +30,11 @@
   width: unset !important;
 }
 
-mat-form-field {
-  width: 100%;
-}
-
 .input-field {
   width: fit-content;
   max-width: 45em;
 }
 
-.input-styled {
-  height: calc(24px);
-  background-color: white;
-  background-color: -moz-field;
-  border-bottom: 1px solid darkgray;
-  padding: 0 3px; 
-  box-sizing: border-box;
-}
-
-.hide-input-arrows {
-  input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-
-  input[type=number] {
-    -moz-appearance: textfield;
-  }
+.label {
+  margin: 0;
 }
