Corrected some token creation issues

--- a/src/app/formly-builder/components/fields/page-fields/page-fields.component.scss
+++ b/src/app/formly-builder/components/fields/page-fields/page-fields.component.scss
@@ -115,7 +115,7 @@
       flex-direction: column-reverse;
       justify-content: space-between;
 
-      button:first-child {
+      button {
         margin-left: unset;
         margin-right: unset;
       }
