--- a/src/app/formly-builder/components/tokens/token-editor/token-editor.component.html
+++ b/src/app/formly-builder/components/tokens/token-editor/token-editor.component.html
@@ -1,2 +1,2 @@
 
-<formly-field *ngFor="let f of field.fieldGroup" [field]="f"></formly-field>
+<formly-field *ngFor="let f of field.fieldGroup" [field]="f" [ngClass]="f.templateOptions?.classes"></formly-field>
