--- a/src/app/formly-core/fields/expansion-panel-array-field/expansion-panel-array-field.component.html
+++ b/src/app/formly-core/fields/expansion-panel-array-field/expansion-panel-array-field.component.html
@@ -56,7 +56,7 @@
         </div>
 
         <div [ngClass]="{ 'pad-half': !isMobile }" *ngIf="getFields(page) as fields">
-          <formly-field [field]="fields"></formly-field>
+          <formly-field [field]="fields" [ngClass]="fields.templateOptions?.classes"></formly-field>
         </div>
       </ng-template>
 
