--- a/src/app/formly-core/modal/show-form-modal/show-form-modal.component.html
+++ b/src/app/formly-core/modal/show-form-modal/show-form-modal.component.html
@@ -1,1 +1,1 @@
-<formly-field [field]="field"></formly-field>
+<formly-field [field]="field" [ngClass]="field.templateOptions?.classes"></formly-field>
