Started rework on conditions

--- a/src/app/formly-builder/formly-builder.component.html
+++ b/src/app/formly-builder/formly-builder.component.html
@@ -14,7 +14,7 @@
     </button>
   </form>
 
-  <div *ngIf="schemaDef" style="white-space:pre-line">
+  <div *ngIf="schemaDef" style="white-space: pre-line;">
     <pre>{{ schemaDef }}</pre>
   </div>
 </div>
