--- a/src/app/formly-builder/modals/rule-editor/rule-editor.component.html
+++ b/src/app/formly-builder/modals/rule-editor/rule-editor.component.html
@@ -17,7 +17,7 @@
 
 <div class="condition">
   <div class="center-content">
-    <formly-field class="operator-selection" *ngIf="operator" [field]="operator" [ngClass]="operator.templateOptions?.classes"></formly-field>
+    <formly-field class="operator-selection" *ngIf="operator && leftSideComparisonAgainst" [field]="operator" [ngClass]="operator.templateOptions?.classes"></formly-field>
   </div>
 
   <mat-divider></mat-divider>
@@ -29,7 +29,7 @@
       {{ label ?? ('Select Operator' | translate) }}
     </div>
 
-    <formly-field *ngIf="rightHandSide" [field]="rightHandSide" [ngClass]="rightHandSide.templateOptions?.classes"></formly-field>
+    <formly-field *ngIf="rightHandSide && leftSideComparisonAgainst" [field]="rightHandSide" [ngClass]="rightHandSide.templateOptions?.classes"></formly-field>
   </div>
 </div>
 
