--- a/src/app/formly-builder/components/expression/operator-condition/operator-condition.component.html
+++ b/src/app/formly-builder/components/expression/operator-condition/operator-condition.component.html
@@ -1,6 +1,6 @@
 <div class="flex fill-width">
   <div class="top-buttons center-content" [style.margin-left]="'auto'">
-    <button type="button" mat-button (click)="add()" [disabled]="field.fieldGroup?.length">
+    <button type="button" mat-button (click)="add()">
       <div class="center-content flex">
         <mat-icon>add</mat-icon>
 
