Adjusted to have selective options for dropdowns depending on selection

--- a/src/app/formly-builder/modals/rule-editor/rule-editor.component.html
+++ b/src/app/formly-builder/modals/rule-editor/rule-editor.component.html
@@ -17,7 +17,7 @@
 
 <div class="condition">
   <div class="center-content">
-    <formly-field class="operator-selection" *ngIf="operator && leftSideComparisonAgainst" [field]="operator" [ngClass]="operator.templateOptions?.classes"></formly-field>
+    <formly-field class="operator-selection" *ngIf="operator" [field]="operator" [ngClass]="operator.templateOptions?.classes"></formly-field>
   </div>
 
   <mat-divider></mat-divider>
@@ -25,11 +25,11 @@
   <div class="comparison-selections pad-top-half">
     <formly-field *ngIf="leftHandSide" [field]="leftHandSide" [ngClass]="leftHandSide.templateOptions?.classes"></formly-field>
 
-    <div class="subtitle-filled pad-left pad-right">
-      {{ label ?? ('Select Operator' | translate) }}
+    <div class="subtitle-filled pad">
+      {{ label || ('Select Operator' | translate) }}
     </div>
 
-    <formly-field *ngIf="rightHandSide && leftSideComparisonAgainst" [field]="rightHandSide" [ngClass]="rightHandSide.templateOptions?.classes"></formly-field>
+    <formly-field *ngIf="rightHandSide" [field]="rightHandSide" [ngClass]="rightHandSide.templateOptions?.classes"></formly-field>
   </div>
 </div>
 
