--- a/src/app/formly-core/fields/date-input-field/date-input-field.component.html
+++ b/src/app/formly-core/fields/date-input-field/date-input-field.component.html
@@ -1,4 +1,8 @@
-<label [id]="field.id + '_label'" class="body-text label" [innerHTML]="to.label + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
+<div class="flex body-text">
+  <label [id]="field.id + '_label'" [innerHTML]="to.label + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
+
+  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
+</div>
 
 <mat-form-field
   class="input-field"
