--- a/src/app/formly-core/fields/radio-button-field/radio-button-field.component.html
+++ b/src/app/formly-core/fields/radio-button-field/radio-button-field.component.html
@@ -7,7 +7,7 @@
   [required]="to.required">
 
   <fieldset class="fieldset" [ngClass]="to.classes">
-    <legend class="body-text">
+    <legend class="flex body-text">
       <div [innerHTML]="to.label + (to.required ? ' *' : '') | tokens: to | keepHtml"></div>
       <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
     </legend>
