--- a/src/app/formly-core/fields/textbox-field/textbox-field.component.scss
+++ b/src/app/formly-core/fields/textbox-field/textbox-field.component.scss
@@ -8,8 +8,12 @@
   width: unset !important;
 }
 
-:host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
-  padding: 0 0 0.75em 0;
+:host ::ng-deep mat-form-field.no-label .mat-form-field-wrapper .mat-form-field-flex {
+  padding: 0 0.75em 0 !important;
+
+  .mat-form-field-infix {
+    border-top: 0 !important;
+  }
 }
 
 :host ::ng-deep mat-form-field mat-label {
