--- a/src/app/formly-core/fields/textbox-field/textbox-field.component.html
+++ b/src/app/formly-core/fields/textbox-field/textbox-field.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <mat-form-field class="textarea-wrapper"
-  [appearance]="to.appearance || 'fill'"
+  [appearance]="to.appearance || 'outline'"
   [floatLabel]="to.floatLabel || 'always'"
   [ngClass]="{ 'no-label': !to.encapsulateLabel }">
 
