--- a/src/app/formly-core/fields/number-input-field/number-input-field.component.scss
+++ b/src/app/formly-core/fields/number-input-field/number-input-field.component.scss
@@ -9,7 +9,7 @@
 }
 
 :host ::ng-deep mat-form-field.no-label .mat-form-field-wrapper .mat-form-field-flex {
-  padding: 0 0.75em 0 !important;
+  padding: 0 0.75em !important;
 
   .mat-form-field-infix {
     border-top: 0.5em solid transparent !important;
