--- a/src/app/formly-core/fields/text-input-field/text-input-field.component.html
+++ b/src/app/formly-core/fields/text-input-field/text-input-field.component.html
@@ -6,7 +6,7 @@
 
 <mat-form-field
   class="input-field"
-  [appearance]="to.encapsulateLabel && to.appearance ? to.appearance : 'fill'"
+  [appearance]="to.encapsulateLabel && to.appearance ? to.appearance : 'outline'"
   [floatLabel]="to.floatLabel || 'always'"
   [ngClass]="{ 'no-label': !to.encapsulateLabel }">
 
