--- a/src/app/formly-core/fields/textbox-field/textbox-field.component.scss
+++ b/src/app/formly-core/fields/textbox-field/textbox-field.component.scss
@@ -9,7 +9,7 @@
 }
 
 :host ::ng-deep mat-form-field.no-label .mat-form-field-wrapper .mat-form-field-flex {
-  padding: 0 0.75em 0 !important;
+  padding: 0 0.75em !important;
 
   .mat-form-field-infix {
     border-top: 0 !important;
@@ -28,7 +28,6 @@
 .textarea {
   width: 45em;
   resize: both !important;
-  padding-top: 0.75em;
   min-width: 300px;
   max-width: 100%;
 }
