--- a/src/app/formly-core/display-types/stepper-form/stepper-form.component.html
+++ b/src/app/formly-core/display-types/stepper-form/stepper-form.component.html
@@ -5,9 +5,9 @@
   (selectionChange)="incrementPageFromIndex($event.selectedIndex)">
 
   <mat-step *ngFor="let page of field.fieldGroup; let index = index"
-    [hasError]="step.interacted && page.formControl?.invalid"
+    [hasError]="step.interacted && page.formControl?.invalid && page.formControl?.touched"
     [optional]="page.templateOptions?.isOptional || false"
-    [stepControl]="getPageFormControl(page)"
+    [stepControl]="page.formControl"
     [state]="getPageState(page)"
     #step>
 
@@ -18,11 +18,11 @@
     <formly-field [field]="page" *ngIf="selectedIndex === index" [ngClass]="page.templateOptions?.classes"></formly-field>
   </mat-step>
 
-  <ng-template *ngFor="let state of getPageStates() | keyvalue" [matStepperIcon]="state.key">
+  <ng-template *ngFor="let state of to.pageStates | keyvalue" [matStepperIcon]="state.key">
     <mat-icon [ngClass]="state.value.class">{{ state.value.icon }}</mat-icon>
   </ng-template>
 
-  <ng-template *ngIf="!getPageStates() || !getPageStates()['page-error']" matStepperIcon="page-error">
+  <ng-template *ngIf="!to.pageStates || !to.pageStates['page-error']" matStepperIcon="page-error">
     <mat-icon class="material-icons page-error">warning</mat-icon>
   </ng-template>
 </mat-vertical-stepper>
@@ -35,9 +35,9 @@
     (selectionChange)="incrementPageFromIndex($event.selectedIndex)">
 
     <mat-step *ngFor="let page of field.fieldGroup; let index = index"
-      [hasError]="step.interacted && page.formControl?.invalid"
+      [hasError]="step.interacted && page.formControl?.invalid && page.formControl?.touched"
       [optional]="page.templateOptions?.isOptional || false"
-      [stepControl]="getPageFormControl(page)"
+      [stepControl]="page.formControl"
       [state]="getPageState(page)"
       #step>
 
@@ -48,11 +48,11 @@
       </ng-template>
     </mat-step>
 
-    <ng-template *ngFor="let state of getPageStates() | keyvalue" [matStepperIcon]="state.key">
+    <ng-template *ngFor="let state of to.pageStates | keyvalue" [matStepperIcon]="state.key">
       <mat-icon [ngClass]="state.value.class">{{ state.value.icon }}</mat-icon>
     </ng-template>
 
-    <ng-template *ngIf="!getPageStates() || !getPageStates()['page-error']" matStepperIcon="page-error">
+    <ng-template *ngIf="!to.pageStates || !to.pageStates['page-error']" matStepperIcon="page-error">
       <mat-icon class="material-icons page-error">warning</mat-icon>
     </ng-template>
   </mat-horizontal-stepper>
