--- a/src/app/formly-core/fields/date-input-field/date-input-field.component.scss
+++ b/src/app/formly-core/fields/date-input-field/date-input-field.component.scss
@@ -12,6 +12,7 @@
   .mat-form-field-infix {
     width: unset;
     border-top: 0.5em solid transparent !important;
+    padding-top: 0.75em;
   }
 }
 
